<resources xmlns:tools="http://schemas.android.com/tools"
           tools:shrinkMode="strict">
    <string name="app_name">B-Town</string>
    <string name="feedback_email" translatable="false">carcmedev@gmail.com</string>
    <string name="website" translatable="false">https://carcmedev.github.io/btown/index.html</string>
    <string name="bugtracker" translatable="false">https://github.com/carcme/btown_mvp/issues</string>
    <string name="playStoreLink" translatable="false">https://play.google.com/store/apps/details?id=me.carc.btown</string>
    <string name="todo" translatable="false">todo</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="menu_transportr">Public TransportR</string>
    <string name="menu_public_transport">Public Transport Schedules</string>
    <string name="menu_train_route_map">Route Map</string>
    <string name="menu_translate">Translator</string>
    <string name="no_name_background" translatable="false"> </string>
    <string name="no_desc_background" translatable="false"> </string>
    <string name="name_background_placeholder" translatable="false">Berliner Dom </string>
    <string name="desc_background_placeholder">Berliner Dom and TV tower</string>
    <string name="name_background_jewish">Holocaust Memorial</string>
    <string name="desc_background_jewish">Memorial to the Murdered Jews of Europe</string>
    <string name="name_background_transportr" translatable="false">Transportr</string>
    <string name="desc_background_transportr">Public Transport companion app</string>
    <string name="name_background_brandenburg_tor" translatable="false">Brandenburg Tor</string>
    <string name="desc_background_brandenburg_tor">The Brandenburg Gate by night</string>
    <string name="desc_background_brandenburg_tor2">The Brandenburg Gate</string>
    <string name="name_background_ubahn" translatable="false">U-Bahn</string>
    <string name="desc_background_ubahn">U-Bahn departing</string>
    <string name="name_background_sanssouci" translatable="false">Sanssouci</string>
    <string name="desc_background_sanssouci">Sanssouci palace in Potsdam</string>
    <string name="name_background_insel" translatable="false">Bode Museum</string>
    <string name="desc_background_insel">One of many museums on Museum Island</string>
    <string name="use_long_press_to_remove_favorite">Use long press to remove favorite</string>
    <string name="favorites_list_empty">Favorites Places\n\nAdd new favorite places using the map.\n\nUse the top menu to sort or show them all on the map</string>
    <string name="history_list_empty">Search History\n\nFind specific places and roads using the top bar… selections are added here.\n\n Press and hold an item for additional options</string>
    <string name="wiki_bookmark_list_empty">Wikipedia Reading List\n\nYour saved Wikipedia entries will appear here</string>
    <string name="favorite_save">Add to Favorites</string>
    <string name="favorite_saved">Added to Favorites</string>
    <string name="favorite_removed">Removed from Favorites</string>
    <string name="bookmark_add">Add to Reading List</string>
    <string name="bookmark_addded">Added to Reading List</string>
    <string name="bookmark_removed">Removed from Reading List</string>
    <string name="history_saved">Added to History</string>
    <string name="history_removed">Removed from History</string>
    <string name="text_close">Close</string>
    <string name="elevation">Elevation</string>
    <string name="distance">Distance</string>
    <string name="total_distance">Total Distance</string>
    <string name="altitude_descent">Descent</string>
    <string name="altitude_ascent">Ascent</string>
    <string name="shared_string_never_ask">Never Ask</string>
    <string name="shared_string_delete">Delete</string>
    <string name="shared_string_delete_all">Delete All</string>
    <string name="shared_string_share">Share</string>
    <string name="shared_string_share_image">Share Image</string>
    <string name="shared_string_close">Close</string>
    <string name="shared_string_time">Time</string>
    <string name="shared_string_go">Go</string>
    <string name="shared_my_location">My Location</string>
    <string name="shared_string_selected_lowercase">selected</string>
    <string name="shared_string_remove">Remove</string>
    <string name="shared_string_save">Save</string>
    <string name="shared_string_show_details">Show details</string>
    <string name="shared_string_io_error">I/O error occurred</string>
    <string name="shared_string_send">Send</string>
    <string name="shared_string_copy">Copy</string>
    <string name="shared_string_location">Location</string>
    <string name="shared_string_camera">Camera</string>
    <string name="shared_string_internet">Share Link</string>
    <string name="shared_string_browser">Open in Browser</string>
    <string name="shared_string_show_on_map">Show on Map</string>
    <string name="shared_string_use_on_home_screen">Use on Home Screen</string>
    <string name="shared_string_bookmark">Reading List</string>
    <string name="shared_string_options">Options</string>
    <string name="shared_string_user_guide">User Guide</string>
    <string name="shared_string_help_toggle">Toggle Help</string>
    <string name="shared_string_info">Info</string>
    <string name="shared_string_rate">Rate</string>
    <string name="shared_string_language">Language</string>
    <string name="shared_string_feedback">Feedback</string>
    <string name="shared_string_settings">Settings</string>
    <string name="shared_string_post">Post</string>
    <string name="shared_string_your_message_hint">Your message</string>
    <string name="shared_string_image_uploads">Image Uploads</string>
    <string name="shared_string_column">Column</string>
    <string name="shared_string_grid">Grid</string>
    <string name="shared_string_shuffle">Shuffle</string>
    <string name="shared_string_about">About</string>
    <string name="shared_string_thankyou">Thank you!</string>
    <string name="shared_string_copied_to_clipboard">Copied to clipboard</string>
    <string name="shared_string_loading">Loading</string>
    <string name="shared_string_none">None</string>
    <string name="shared_string_success">Success</string>
    <string name="shared_string_search">Search</string>
    <string name="shared_string_download">Download</string>
    <string name="shared_string_offline">Offline</string>
    <string name="shared_string_trends">Trends</string>
    <string name="shared_string_update">Update</string>
    <string name="shared_string_new_features">New featres in update:\n</string>
    <string name="shared_string_try_again">Please try again</string>
    <string name="home_screen_updated">Home Screen Updated</string>
    <string name="shared_string_phone">Phone</string>
    <string name="shared_string_web">Web</string>
    <string name="shared_string_unknown">Unknown</string>
    <string name="shared_string_missing_data" translatable="false">---</string>
    <string name="text_donate_title">Donate</string>
    <string name="text_donate_subtitle">Show some love</string>
    <string name="text_donate_progress_title">Connecting&#8230;</string>
    <string name="text_donate_progress_message">This can take some time. Thanks for your patience</string>
    <string name="text_donate_cancel">Thanks you, really means a lot and allows me to keep making B-Town better.\n\nIf you could rate us on the Play Store, that would be great.</string>
    <string name="text_donate_thanks">Thanks you for your support&#8230; come back for new tours on your next visit</string>
    <string name="rating_dialog_experience">Ratings really matter… could you leave some stars?</string>
    <string name="rating_dialog_maybe_later">Maybe later</string>
    <string name="rating_dialog_never">Never</string>
    <string name="rating_dialog_feedback_title">Feedback</string>
    <string name="rating_dialog_submit">Submit</string>
    <string name="rating_dialog_cancel">Cancel</string>
    <string name="rating_dialog_suggestions">Suggest what you want and we\'ll work on it!</string>
    <string name="ratings_request_title">Love to know what you think of the app</string>
    <string name="feedback_request_title">Send Feedback</string>
    <string name="feedback_request_hint">Tell us where we can improve&#8230;</string>
    <string name="feedbackChooserTitle">Send Feedback Via</string>
    <string name="wikipedia" translatable="false">Wikipedia</string>
    <string name="wikipedia_underline" translatable="false"><u>Wikipedia</u></string>
    <string name="facebook" translatable="false">Facebook</string>
    <string name="facebook_underline" translatable="false"><u>Facebook</u></string>
    <string name="google" translatable="false">Google</string>
    <string name="google_underline" translatable="false"><u>Google</u></string>
    <string name="instagram" translatable="false">Instagram</string>
    <string name="instagram_underline" translatable="false"><u>Instagram</u></string>
    <string name="twitter" translatable="false">Twitter</string>
    <string name="twitter_underline" translatable="false"><u>Twitter</u></string>
    <string name="install_instagram">Install Instagram</string>
    <string name="install_transportr">Install TransportR</string>
    <string name="install_translate">Install Translator</string>
    <string name="no_translate">Google Translator not detected on device (required). Would you like to install it now?</string>
    <string name="no_instagram">Instagram not detected on device (required). Would you like to install it now?</string>
    <string name="no_transportr">TransportR not detected on device (required). Would you like to install it now?</string>
    <string name="strShareBody">"B-Town | Maps and Tours for Tourist and Locals"</string>
    <string name="sign_out">Sign out</string>
    <string name="sign_in_with" formatted="false">Sign in with %s</string>
    <string name="enter_your_own_notes">Enter your own notes…</string>
    <string name="rationale_locaiton">B-Town works best if it knows where you are.</string>
    <string name="rationale_storage">B-Town needs to store map tiles.</string>
    <string name="permission_rejected_msg">B-Town really needs those permissions for the map functions. Hope you change your mind and grant the permissions another time.</string>
    <string name="pref_display">Display</string>
    <string name="pref_location_use_gps_title">Power Usage</string>
    <string name="pref_location_use_gps_best_accuracy">Always use GPS for best accuracy</string>
    <string name="pref_show_tours_title">Show Tours</string>
    <string name="pref_tours_summary_show">Show tours button on map</string>
    <string name="pref_language_title">Language</string>
    <string name="german">German</string>
    <string name="about_top">© 2018 Marc Bampton\nFree Software License: GPLv3</string>
    <string name="about"><![CDATA[
<p>The idea of B-Town came while travelling and wanting something that would give insider tips for various cities. As Berlin has so much to offer, this seemed like a good place to start</p>
<p>Whether you\'re interested in local bars, restaurtants or sightseeing or trending places, B-Town makes playing in Berlin easier. We\'ve got hidden places, insider tips and, for more general info, Wikipedia lookups</p>
<p>OpenStreetMap is updated daily by contributors all over the world… so the map should be up to date… mostly :)</p>
<p>If you have any suggestions of what you\'d like to see, let me know via the feedback button</p>
]]></string>
    <string name="visit_website">Website</string>
    <string name="maintainer">Maintainer</string>
    <string name="contributors">Contributors</string>
    <string name="translators">Translators</string>
</resources>