<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:key="pref_key_location"
        android:title="@string/shared_string_location">

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="pref_key_use_gps"
            android:summary="@string/pref_location_use_gps_best_accuracy"
            android:title="@string/pref_location_use_gps_title" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="pref_key_display"
        android:title="@string/pref_display">

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="pref_key_tours"
            android:summary="@string/pref_tours_summary_show"
            android:title="@string/pref_show_tours_title" />

        <ListPreference
            android:alertDialogTheme="@style/DialogTheme"
            android:defaultValue="@string/pref_language_value_default"
            android:entries="@array/pref_language_options"
            android:entryValues="@array/pref_language_values"
            android:key="pref_key_language"
            android:negativeButtonText="@android:string/cancel"
            android:summary="%s"
            android:title="@string/pref_language_title" />

    </PreferenceCategory>

</PreferenceScreen>