<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <group
        android:id="@+id/nav_menu_extras"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_transportr"
            android:icon="@drawable/ic_transportr_app"
            android:title="@string/menu_public_transport"
            />
        <item
            android:id="@+id/nav_transport_maps"
            android:icon="@drawable/ic_subway"
            android:title="@string/menu_train_route_map"/>

        <item
            android:id="@+id/nav_translate"
            android:icon="@drawable/ic_translate"
            android:title="@string/menu_translate"/>
    </group>

    <group
        android:id="@+id/nav_menu_settings"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_donate"
            android:icon="@drawable/ic_donate"
            android:title="@string/donate"/>

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_box"
            android:title="@string/shared_string_settings"/>

    </group>


    <group
        android:id="@+id/nav_menu_communication"
        android:checkableBehavior="none">

        <item
            android:id="@+id/nav_rate"
            android:icon="@drawable/ic_rate"
            android:title="@string/shared_string_rate"/>

        <item
            android:id="@+id/nav_feedback"
            android:icon="@drawable/ic_feedback_black_24dp"
            android:title="@string/shared_string_feedback"/>

        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/shared_string_share"/>
    </group>

</menu>