<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@mipmap/ic_launcher_rnd"
                android:contentDescription="@string/app_name"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

                <TextView
                    android:id="@+id/aboutApp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_standard"
                    tools:text="B-Town 0.0.1"/>

                <TextView
                    android:id="@+id/aboutTopTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_standard"
                    android:text="@string/about_top"
                    />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/aboutTextView"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="fill_vertical|fill_horizontal|fill"
            android:clickable="true"
            android:linksClickable="true"
            android:padding="10dp"
            android:text="@string/about" />

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            >

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/shareButton"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/white"
                    android:text="@string/shared_string_share"/>

                <Button
                    android:id="@+id/rateButton"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/white"
                    android:text="@string/shared_string_rate"/>

            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/feedbackButton"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/white"
                    android:text="@string/shared_string_feedback"/>

                <Button
                    android:id="@+id/websiteButton"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/white"
                    android:text="@string/visit_website"/>
            </TableRow>

        </TableLayout>



    </LinearLayout>
</ScrollView>