<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="7dp">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:foreground="?android:attr/selectableItemBackground"
            card_view:cardBackgroundColor="@color/almostWhite"
            card_view:cardCornerRadius="2dp"
            card_view:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="6dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="3dp"
                    android:text="@string/maintainer"
                    android:textColor="?android:attr/textColorPrimary"
                    android:textSize="@dimen/textSizeLarge_openSource"
                    android:textStyle="normal"/>

                <include layout="@layout/divider"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="7dp"
                    android:padding="7dp"
                    android:text="Carc"
                    tools:ignore="HardcodedText"/>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:foreground="?android:attr/selectableItemBackground"
            card_view:cardBackgroundColor="@color/almostWhite"
            card_view:cardCornerRadius="2dp"
            card_view:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="6dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="3dp"
                    android:text="@string/contributors"
                    android:textColor="?android:attr/textColorPrimary"
                    android:textSize="@dimen/textSizeLarge_openSource"
                    android:textStyle="normal"/>

                <include layout="@layout/divider"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="7dp"
                    android:padding="7dp"
                    android:text="---"
                    tools:ignore="HardcodedText"/>


            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:foreground="?android:attr/selectableItemBackground"
            card_view:cardBackgroundColor="@color/almostWhite"
            card_view:cardCornerRadius="2dp"
            card_view:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="6dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="3dp"
                    android:text="@string/translators"
                    android:textColor="?android:attr/textColorPrimary"
                    android:textSize="@dimen/textSizeLarge_openSource"
                    android:textStyle="normal"/>

                <include layout="@layout/divider"/>

                <TableLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="7dp">

                    <TableRow
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="7dp"
                            android:text="@string/german"
                            android:textColor="?android:attr/textColorPrimary"
                            />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:padding="7dp"
                            android:text="Susanne Abendroth"
                            tools:ignore="HardcodedText"/>

                    </TableRow>

                </TableLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>